# python_qt_formation

./: README.md  pyproject.toml
python_qt_formation/: container_widget.py  earthquake_table.py  main.py  main_window.py
